--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,14 @@
 --web-name-color:#2e2f42;
 --hover-back-graund: #404BBF;
 --logo-footer-portfolio: #4d5ae5 ;
+--transition:250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 body{
     font-family: "Roboto",sans-serif;
     color:var(--accent-color);
     background-color:#FFFFFF;
     font-style: normal;
+    transition:color var(--transition), background-color var(--transition), box-shadow var(--transition), border-color var(--transition) ;
    }
 button{
     cursor: pointer;
@@ -75,9 +77,7 @@ a{
 .wrapper{
     
     
-    /* margin-left: auto ;
-    margin-right: auto ;
-      width: 300px ; */
+  
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
@@ -135,6 +135,7 @@ justify-content: center;
     text-decoration: none;
 
     padding: 24px 0;
+    transition: color var(--transition);
 }
 .body-nav-link:hover,
 .body-nav-link:focus{
@@ -162,6 +163,7 @@ justify-content: center;
     padding: 12px 24px;
     border: 1px solid #e7e9fc;   
     border-radius: 4px;
+    transition: color var(--transition),background-color var(--transition), box-shadow var(--transition), border-color var(--logo-footer-portfolio) ;
       }
 .btn:hover,
 .btn:focus{
