--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,11 @@ address{
     text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6, p { 
-    /* margin-top: 0px; 
-    margin-bottom: 0px; */
+  
     margin: 0;
 }
 ul, ol { 
-    /* margin-top: 0; 
-    margin-bottom: 0;  */
+ 
    list-style: none;
     margin: 0;
     padding: 0; }
@@ -57,11 +55,7 @@ a{
 .container{
     margin: 0 auto;
     padding: 0 15px;
-    /* padding-left:0,15px;
-    padding-right:0,15px;
-    padding-top: 0.15px;
-    padding-bottom: 0.15px; */
-    width: 1158px
+      width: 1158px
 }
 .achivement-container{
     display: flex;
@@ -75,9 +69,6 @@ a{
 }
 
 .wrapper{
-    
-    
-  
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
@@ -185,6 +176,7 @@ justify-content: center;
     border: none;
     border-radius: 4px; 
     padding: 16px 32px;
+    transition: color var(--transition), background-color var(--transition) ;
 }
 .button:hover,
 .button:focus{
@@ -238,6 +230,7 @@ align-items: center;
 justify-content: center;
 color: #8e8f99;
 height: 100%;
+transition: color var(--transition), background-color var(--transition) ;
 
 }
 .customers-list-link:hover,
@@ -286,13 +279,10 @@ height: 100%;
 }
 .features-portfolio{
     display: flex;
-    /* margin: 0 auto;
-    padding: 0 15px; */
-    align-items: center;
+       align-items: center;
 }
 .hero-navigation{
-    /* margin: 0 auto;
-    padding: 0 15px; */
+
     display: flex;
     align-items: center;
 }
@@ -326,8 +316,7 @@ height: 100%;
      gap: 40px;
 }
 .list-products{
-    /* width: calc((100% - 48px) / 3); */
-    padding-bottom: 120px; 
+      padding-bottom: 120px; 
 }
  .logo {     
     font-family: 'Raleway',sans-serif;
@@ -370,6 +359,7 @@ height: 100%;
   line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--accent-color);
+    transition: color var(--transition);
    
 }
 .mail:hover,
@@ -382,6 +372,7 @@ height: 100%;
   line-height: 1.5;
   letter-spacing: 0.02em; 
   color: #434455;
+  transition: color var(--transition);
   }
 .mail-index:hover, 
 .mail-index:focus{
@@ -390,9 +381,7 @@ height: 100%;
 .main-head{
     border-bottom: 1px solid #e7e9fc;
     box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    /* display: flex;
-    margin: 0 auto;
-    padding: 0 15px; */
+
 }
 .main-section{ 
     background-color: #2e2f42;
@@ -458,6 +447,7 @@ height: 100%;
     color:#2e2f42;
     text-decoration: none;
     padding: 24px 0;
+    transition: color var(--transition);
     }
 .nav-link:hover,
 .nav-link:focus{
@@ -523,10 +513,7 @@ margin-bottom: 16px;
 
     width: 40px;
     height: 40px;
-    
-    /* display: block; */
-      /* justify-content: space-between; */
-    
+   
 }
 .social-list-icon{
    fill: #f4f4fd;
@@ -541,7 +528,8 @@ margin-bottom: 16px;
     background: #4D5AE5;
     /* margin: auto; */
     width: 100%;
-    height: 100%;      
+    height: 100%;   
+    transition: background-color var(--transition);   
 }
 .social-list-link:hover,
 .social-list-link:focus{
@@ -557,7 +545,7 @@ margin-bottom: 16px;
     background: #4D5AE5;
     margin: auto;
     gap: 16px;
-       
+    transition: background-color var(--transition);       
 }
 .social-list-link-footer:hover,
 .social-list-link-footer:focus{
@@ -582,6 +570,7 @@ color: #FFFFFF;
     }
 .total-information-link{
     display: block;
+    transition:box-shadow var(--transition) ;
 }
 .total-information-link:hover,
 .total-information-link:focus{
