--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ justify-content: center;
     padding: 12px 24px;
     border: 1px solid #e7e9fc;   
     border-radius: 4px;
-    transition: color var(--transition),background-color var(--transition), box-shadow var(--transition), border-color var(--logo-footer-portfolio) ;
+    transition: color var(--transition),background-color var(--transition), box-shadow var(--transition), border var(--logo-footer-portfolio) ;
       }
 .btn:hover,
 .btn:focus{
@@ -230,7 +230,7 @@ align-items: center;
 justify-content: center;
 color: #8e8f99;
 height: 100%;
-transition: color var(--transition), background-color var(--transition) ;
+transition: color var(--transition), border-color var(--transition) ;
 
 }
 .customers-list-link:hover,
@@ -522,11 +522,8 @@ margin-bottom: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 44px;
-    height: 44px; */
-    border-radius: 50%;
+     border-radius: 50%;
     background: #4D5AE5;
-    /* margin: auto; */
     width: 100%;
     height: 100%;   
     transition: background-color var(--transition);   
