--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,19 @@ justify-content: center;
     padding: 24px 0;
     transition: color var(--transition);
 }
+.body-nav-link::after  {
+    display: block;
+    content: "";
+    /* position: absolute; */
+width: 48px;
+height: 4px;
+top: 44px;
+background: #404BBF;
+border-radius: 2px;
+padding-bottom: 0;
+    
+
+}
 .body-nav-link:hover,
 .body-nav-link:focus{
     color: #404bbf;
