--- a/css/styles.css
+++ b/css/styles.css
@@ -131,12 +131,13 @@ justify-content: center;
 .body-nav-link::after  {
     display: block;
     content: "";
-    /* position: relative; */
-    /* left: 0; */
+    position: relative;
+    left: 0;
 width: 48px;
 height: 4px;
+bottom: -1px;
 top: 44px;
-color: #404BBF;
+background-color: #404BBF;
 border-radius: 2px;
 padding-bottom: 0;
     
