--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,6 @@ top: 44px;
 background-color: #404BBF;
 border-radius: 2px;
 padding-bottom: 0;
-    
-
 }
 .body-nav-link:hover,
 .body-nav-link:focus{
@@ -297,6 +295,10 @@ transition: color var(--transition), border-color var(--transition) ;
     display: flex;
        align-items: center;
 }
+.features-portfolio-menu{
+    position: relative;
+    color: #404bbf; ;
+}
 .hero-navigation{
 
     display: flex;
@@ -433,6 +435,10 @@ transition: color var(--transition), border-color var(--transition) ;
     gap: 40px;
     padding: 24px 0;
 }
+.menu-body-nav-link{
+    position: relative;
+    color: #404bbf; 
+}
 .menu:not(:last-child){
     margin: 40px;
 }
@@ -465,6 +471,19 @@ transition: color var(--transition), border-color var(--transition) ;
     text-decoration: none;
     padding: 24px 0;
     transition: color var(--transition);
+    }
+.nav-link::after  {
+        display: block;
+        content: "";
+        position: absolute;
+        left: 0;
+    width: 48px;
+    height: 4px;
+    bottom: -1px;
+    top: 44px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    padding-bottom: 0;
     }
 .nav-link:hover,
 .nav-link:focus{
@@ -609,12 +628,12 @@ color: #FFFFFF;
     margin-bottom: 8px;
 }
 
+/* ===============BACKDROP============ */
 
 
 
 
-
-
+/* ===============/BACKDROP============ */
 
 
 
