--- a/css/styles.css
+++ b/css/styles.css
@@ -629,8 +629,29 @@ color: #FFFFFF;
 }
 
 /* ===============BACKDROP============ */
+.backdrop{
+    position: fixed;
+    width: 1440px;
+    height: 677px;
+    left: 0px;
+    top: 0px;
 
-
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    /* width: 100%;
+    height: 100%; */
+    background: rgba(46, 47, 66, 0.4);
+}
+.modal{
+    position: absolute;
+width: 408px;
+height: 584px;
+left: 50%;
+top: 50%;
+transform: translate(50%, 50%);
+background: #FCFCFC;
+}
 
 
 /* ===============/BACKDROP============ */
