--- a/css/styles.css
+++ b/css/styles.css
@@ -630,29 +630,47 @@ color: #FFFFFF;
 
 /* ===============BACKDROP============ */
 .backdrop{
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     position: fixed;
     width: 1440px;
     height: 677px;
-    left: 0px;
-    top: 0px;
+    /* left: 0px;
+    top: 0px; */
 
     top: 0px;
     left: 0px;
     z-index: 100;
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
     background: rgba(46, 47, 66, 0.4);
 }
 .modal{
     position: absolute;
-width: 408px;
+   
+    width: 408px;
 height: 584px;
 left: 50%;
 top: 50%;
 transform: translate(50%, 50%);
 background: #FCFCFC;
 }
+.modal-close-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
 
+    background: #E7E9FC;
+border: 1px solid rgba(0, 0, 0, 0.1);
+padding: 0;
+}
 
 /* ===============/BACKDROP============ */
 
