--- a/css/styles.css
+++ b/css/styles.css
@@ -670,6 +670,7 @@ background: #FCFCFC;
     background: #E7E9FC;
 border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
+transition: background-color var(--transition);
 }
 
 /* ===============/BACKDROP============ */
