--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,10 @@ color: #2E2F42;
     width: calc((100% - 120px) / 6);
     height :88px;
 }
+.customers-list-item:hover,
+.customers-list-item:focus{
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .customers-list-link{
     border: 1px solid #8E8F99;
 border-radius: 4px;
@@ -672,7 +676,10 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
 transition: background-color var(--transition);
 }
-
+.modal-close-button:hover,
+.modal-close-button:focus{
+    transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);  ;
+}
 /* ===============/BACKDROP============ */
 
 
