--- a/css/styles.css
+++ b/css/styles.css
@@ -234,11 +234,12 @@ color: #2E2F42;
 .customers-list-item{
     width: calc((100% - 120px) / 6);
     height :88px;
+    /* transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.customers-list-item:hover,
+/* .customers-list-item:hover,
 .customers-list-item:focus{
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  border-color: #fff;
+} */
 .customers-list-link{
     border: 1px solid #8E8F99;
 border-radius: 4px;
@@ -678,7 +679,8 @@ transition: background-color var(--transition);
 }
 .modal-close-button:hover,
 .modal-close-button:focus{
-    transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);  ;
+    background-color: #404bbf;
+    border: none;
 }
 /* ===============/BACKDROP============ */
 
