--- a/css/styles.css
+++ b/css/styles.css
@@ -685,12 +685,13 @@ background: #FCFCFC;
     background: #E7E9FC;
 border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
-transition: background-color var(--transition);
+transition: background-color var(--transition); 
 }
 .modal-close-button:hover,
 .modal-close-button:focus{
     background-color: #404bbf;
     border: none;
+    fill: #ffffff;
 }
 /* ===============/BACKDROP============ */
 
