--- a/css/styles.css
+++ b/css/styles.css
@@ -668,7 +668,8 @@ top: 50%;
 box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px; 
 transform: translate(-50%, -50%) scale(1); 
-transform: translate(50%, 50%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+/* transform: translate(50%, 50%); */
 background: #FCFCFC;
 }
 .modal-close-button{
@@ -685,13 +686,16 @@ background: #FCFCFC;
     background: #E7E9FC;
 border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
-transition: background-color var(--transition); 
+transition: background-color var(--transition), border var(--transition) ;
 }
 .modal-close-button:hover,
 .modal-close-button:focus{
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
+}
+.modal-close-button-icon{
+ransition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ===============/BACKDROP============ */
 
