--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ padding-bottom: 0;
 }
 .btn{
     font-family: "Roboto", sans-serif;
+    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -695,7 +696,7 @@ transition: background-color var(--transition), border var(--transition) ;
     fill: #ffffff;
 }
 .modal-close-button-icon{
-ransition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ===============/BACKDROP============ */
 
