--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,7 @@ transition: color var(--transition), border-color var(--transition) ;
 .list-button{
     justify-content: center; 
     margin-bottom: 72px; 
-    position: relative;
+    /* position: relative; */
 }
 .list-features{
     width: calc((100% - 72px) / 4); 
@@ -456,11 +456,10 @@ transition: color var(--transition), border-color var(--transition) ;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    /* margin-top: 32px; */
-    
+      
 }
 .name-job{
-    /* padding: 32px 16px; */
+ 
     padding: 32px 0
 }
 .navigation{
@@ -468,7 +467,6 @@ transition: color var(--transition), border-color var(--transition) ;
     align-items: center; 
     margin-right: auto;
 }
-
 .nav-link{
     font-weight: 500;
     font-size: 16px;
@@ -496,6 +494,21 @@ transition: color var(--transition), border-color var(--transition) ;
 .nav-link:focus{
     color: #404bbf;
     }
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#F4F4FD;
+    background: rgba(77, 90, 229, 1);
+    padding-top: 40px;
+    padding-bottom: 164px;
+    padding-right: 32px;
+    padding-left: 32px;
+    width: 100%;
+}
 .our-products{
     width: calc((100% - 48px) / 3);
 }
@@ -609,6 +622,7 @@ color: #FFFFFF;
         width: calc((100% - 48px) / 3);
     }
 .total-information-link{
+    position: relative;
     display: block;
     transition:box-shadow var(--transition) ;
 }
@@ -637,10 +651,7 @@ color: #FFFFFF;
 
 /* ===============BACKDROP============ */
 .backdrop{
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    position: fixed;
+        position: fixed;
     width: 1440px;
     height: 677px;
     /* left: 0px;
