--- a/css/styles.css
+++ b/css/styles.css
@@ -128,18 +128,18 @@ justify-content: center;
     padding: 24px 0;
     transition: color var(--transition);
 }
-.body-nav-link::after  {
-    display: block;
+.curent::after  {
+    /* display: block; */
     content: "";
     position: absolute;
     left: 0;
 width: 48px;
 height: 4px;
 bottom: -1px;
-top: 44px;
+/* top: 44px; */
 background-color: #404BBF;
 border-radius: 2px;
-padding-bottom: 0;
+/* padding-bottom: 0; */
 }
 .body-nav-link:hover,
 .body-nav-link:focus{
@@ -190,7 +190,7 @@ padding-bottom: 0;
     border: none;
     border-radius: 4px; 
     padding: 16px 32px;
-    transition: color var(--transition), background-color var(--transition) ;
+    transition: color var(--transition),background-color var(--transition) ;
 }
 .button:hover,
 .button:focus{
@@ -217,6 +217,10 @@ padding-bottom: 0;
 }
 .connection-portfolio{
     gap: 40px;
+}
+.curent{
+    position: relative;
+    color:    rgba(64, 75, 191, 1);
 }
 .customers{
     font-weight: 700;
