--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ border-radius: 2px;
     border: none;
     border-radius: 4px; 
     padding: 16px 32px;
-    transition: color var(--transition),background-color var(--transition) ;
+    transition: color var(--transition), background-color var(--transition) ;
 }
 .button:hover,
 .button:focus{
@@ -233,18 +233,22 @@ text-transform: capitalize;
 color: #2E2F42;
 
 }
+/* .customers-list{
+
+} */
 .customers-list-icon{
     fill: currentColor; 
 }
 .customers-list-item{
     width: calc((100% - 120px) / 6);
     height :88px;
-    /* transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: border-color var(--transition), color var(--transition);
 }
-/* .customers-list-item:hover,
+.customers-list-item:hover,
 .customers-list-item:focus{
-  border-color: #fff;
-} */
+  border-color:rgba(142, 143, 153, 1);
+  color:   rgba(142, 143, 153, 1);
+}
 .customers-list-link{
     border: 1px solid #8E8F99;
 border-radius: 4px;
