--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,7 @@ transition: color var(--transition), border-color var(--transition) ;
     padding: 24px 0;
     transition: color var(--transition);
     }
-.nav-link::after  {
+/* .nav-link::after  {
         display: block;
         content: "";
         position: absolute;
@@ -497,7 +497,7 @@ transition: color var(--transition), border-color var(--transition) ;
     background-color: #404BBF;
     border-radius: 2px;
     padding-bottom: 0;
-    }
+    } */
 .nav-link:hover,
 .nav-link:focus{
     color: #404bbf;
@@ -509,12 +509,15 @@ transition: color var(--transition), border-color var(--transition) ;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    
+    transform: translateY(100%);
     color:#F4F4FD;
     background: rgba(77, 90, 229, 1);
-    padding-top: 40px;
-    padding-bottom: 164px;
+    /* padding-top: 40px; */
+    padding: 40px 32px;
+    /* padding-bottom: 164px;
     padding-right: 32px;
-    padding-left: 32px;
+    padding-left: 32px; */
     width: 100%;
 }
 .our-products{
@@ -628,7 +631,12 @@ color: #FFFFFF;
     }
 .total-information{
         width: calc((100% - 48px) / 3);
+       
     }
+.total-information:hover .overlay,
+.total-information:focus .overlay{
+    transform: translateY(0);
+}
 .total-information-link{
     position: relative;
     display: block;
@@ -637,6 +645,10 @@ color: #FFFFFF;
 .total-information-link:hover,
 .total-information-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.total-information-list{
+position: relative;
+overflow: hidden;
 }
 .web-name{
     color:var(--web-name-color)
