--- a/css/styles.css
+++ b/css/styles.css
@@ -480,11 +480,11 @@ transition: color var(--transition), border-color var(--transition) ;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#2e2f42;
+    color: #404bbf;
     text-decoration: none;
     padding: 24px 0;
-    background-color: #404BBF;
-    /* transition: color var(--transition); */
+    /* background-color: #404BBF; */
+    transition: color var(--transition);
     }
 /* .nav-link::after  {
         display: block;
