--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ border-radius: 2px;
     border: 1px solid transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .button{
     font-family: 'Roboto',sans-serif;
     font-weight: 500;
@@ -504,6 +505,7 @@ transition: color var(--transition), border-color var(--transition) ;
     color: #404bbf;
     }
 .overlay{
+    display: block;
     position: absolute;
     left: 0;
     top: 0;
@@ -520,6 +522,7 @@ transition: color var(--transition), border-color var(--transition) ;
     padding-right: 32px;
     padding-left: 32px; */
     width: 100%;
+    height: 100%;
 }
 .our-products{
     width: calc((100% - 48px) / 3);
