--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,7 @@ transition: color var(--transition), border-color var(--transition) ;
     color: #404bbf;
     }
 .overlay{
-    display: block;
+    /* display: block; */
     position: absolute;
     left: 0;
     top: 0;
