--- a/css/styles.css
+++ b/css/styles.css
@@ -516,13 +516,10 @@ transition: color var(--transition), border-color var(--transition) ;
     transform: translateY(100%);
     color:#F4F4FD;
     background: rgba(77, 90, 229, 1);
-    /* padding-top: 40px; */
-    padding: 40px 32px;
-    /* padding-bottom: 164px;
-    padding-right: 32px;
-    padding-left: 32px; */
-    width: 100%;
+        padding: 40px 32px;
+       width: 100%;
     height: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-products{
     width: calc((100% - 48px) / 3);
