--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ border-radius: 2px;
     padding: 12px 24px;
     border: 1px solid #e7e9fc;   
     border-radius: 4px;
-    transition: color var(--transition),background-color var(--transition), box-shadow var(--transition), border-color var(--logo-footer-portfolio) ;
+    transition: background-color var(--transition), box-shadow var(--transition), border-color var(--logo-footer-portfolio) ;
       }
 .btn:hover,
 .btn:focus{
@@ -191,7 +191,7 @@ border-radius: 2px;
     border: none;
     border-radius: 4px; 
     padding: 16px 32px;
-    transition: color var(--transition), background-color var(--transition) ;
+    transition: background-color var(--transition) ;
 }
 .button:hover,
 .button:focus{
@@ -243,13 +243,13 @@ color: #2E2F42;
 .customers-list-item{
     width: calc((100% - 120px) / 6);
     height :88px;
-    transition: border-color var(--transition), color var(--transition);
+    /* transition: border-color var(--transition), color var(--transition); */
 }
-.customers-list-item:hover,
+/* .customers-list-item:hover,
 .customers-list-item:focus{
   border-color:rgba(142, 143, 153, 1);
   color:   rgba(142, 143, 153, 1);
-}
+} */
 .customers-list-link{
     border: 1px solid #8E8F99;
 border-radius: 4px;
