--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ border-radius: 2px;
     padding: 12px 24px;
     border: 1px solid #e7e9fc;   
     border-radius: 4px;
-    transition: color var(--transition), background-color var(--transition), border-color var(--logo-footer-portfolio), box-shadow var(--transition);
+    transition: color var(--transition), background-color var(--transition), border-color var(--transition), box-shadow var(--transition);
       }
 .btn:hover,
 .btn:focus{
@@ -506,8 +506,7 @@ transition: border-color var(--transition), color var(--transition) ;
     color: #404bbf;
     }
 .overlay{
-    /* display: block; */
-    position: absolute;
+     position: absolute;
     left: 0;
     top: 0;
     font-size: 16px;
@@ -647,6 +646,10 @@ color: #FFFFFF;
 .total-information-link:hover,
 .total-information-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.total-information-link:hover .total-information-list
+.total-information-link:focus .total-information-list{
+    transform: translateY(0%)
 }
 .total-information-list{
 position: relative;
