--- a/css/styles.css
+++ b/css/styles.css
@@ -633,12 +633,16 @@ color: #FFFFFF;
     display: block;
     transition:box-shadow var(--transition) ;
 }
+.total-information-link:hover .total-information-list
+.total-information-link:focus .total-information-list{
+    transform: translateY(0%)
+}
 .total-information-link:hover,
 .total-information-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.total-information-link:hover .total-information
-.total-information-link:focus .total-information{
+.total-information-link:hover .total-information-list
+.total-information-link:focus .total-information-list{
     transform: translateY(0%)
 }
 
