--- a/css/styles.css
+++ b/css/styles.css
@@ -633,7 +633,7 @@ color: #FFFFFF;
     display: block;
     transition:box-shadow var(--transition) ;
 }
-.total-information-link:hover .overlay
+.total-information-link:hover .overlay,
 .total-information-link:focus .overlay{
     transform: translateY(0%);
 }
