--- a/css/styles.css
+++ b/css/styles.css
@@ -128,19 +128,7 @@ justify-content: center;
     padding: 24px 0;
     transition: color var(--transition);
 }
-.curent::after  {
-    /* display: block; */
-    content: "";
-    position: absolute;
-    left: 0;
-width: 48px;
-height: 4px;
-bottom: -1px;
-/* top: 44px; */
-background-color: #404BBF;
-border-radius: 2px;
-/* padding-bottom: 0; */
-}
+
 .body-nav-link:hover,
 .body-nav-link:focus{
     color: #404bbf;
@@ -223,6 +211,32 @@ border-radius: 2px;
     position: relative;
     color:    rgba(64, 75, 191, 1);
 }
+.curent::after {
+    content: "";
+    position: absolute;
+    left: 0;
+width: 48px;
+height: 4px;
+bottom: -1px;
+
+background-color: #404BBF;
+border-radius: 2px;
+}
+.curent-portfolio{
+    position: relative;
+    color:    rgba(64, 75, 191, 1);
+}
+.curent-portfolio::after {
+    content: "";
+    position: absolute;
+    left: 0;
+width: 48px;
+height: 4px;
+bottom: -1px;
+
+background-color: #404BBF;
+border-radius: 2px;
+}
 .customers{
     font-weight: 700;
 font-size: 36px;
@@ -234,9 +248,7 @@ text-transform: capitalize;
 color: #2E2F42;
 
 }
-/* .customers-list{
 
-} */
 .customers-list-icon{
     fill: currentColor; 
 }
@@ -245,11 +257,7 @@ color: #2E2F42;
     height :88px;
     /* transition: border-color var(--transition), color var(--transition); */
 }
-/* .customers-list-item:hover,
-.customers-list-item:focus{
-  border-color:rgba(142, 143, 153, 1);
-  color:   rgba(142, 143, 153, 1);
-} */
+
 .customers-list-link{
     border: 1px solid #8E8F99;
 border-radius: 4px;
@@ -488,7 +496,7 @@ transition: border-color var(--transition), color var(--transition) ;
     /* background-color: #404BBF; */
     transition: color var(--transition);
     }
-.nav-link::after  {
+/* .nav-link::after  {
         display: block;
         content: "";
         position: absolute;
@@ -500,7 +508,7 @@ transition: border-color var(--transition), color var(--transition) ;
     background-color: #404BBF;
     border-radius: 2px;
     padding-bottom: 0;
-    }
+    } */
 .nav-link:hover,
 .nav-link:focus{
     color: #404bbf;
